--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@eblib/core": "^1.0.0-beta",
     "core-js": "^3.8.3",
+    "interactjs": "^1.10.27",
     "vue": "^3.2.13"
   },
   "devDependencies": {
