--- a/examples/package.json
+++ b/examples/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "dependencies": {
     "@eblib/core": "^1.0.0-beta",
@@ -18,8 +20,13 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vuepress/bundler-webpack": "^2.0.0-rc.9",
+    "@vuepress/theme-default": "^2.0.0-rc.26",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.2.1",
+    "vuepress": "^2.0.0-rc.9"
   },
   "eslintConfig": {
     "root": true,
