feat: add component EbQrcodeScanner

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "core-js": "^3.8.3",
     "interactjs": "^1.10.27",
     "jsqr": "^1.4.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
