--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
-    "@chromatic-com/storybook": "^1.3.4",
-    "@storybook/addon-essentials": "^8.0.10",
-    "@storybook/addon-interactions": "^8.0.10",
-    "@storybook/addon-links": "^8.0.10",
+    "@chromatic-com/storybook": "^1.4.0",
+    "@storybook/addon-essentials": "^8.1.1",
+    "@storybook/addon-interactions": "^8.1.1",
+    "@storybook/addon-links": "^8.1.1",
+    "@storybook/addon-mdx-gfm": "^8.1.1",
     "@storybook/addon-styling-webpack": "^1.0.0",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
-    "@storybook/blocks": "^8.0.10",
-    "@storybook/test": "^8.0.10",
-    "@storybook/vue3": "^8.0.10",
-    "@storybook/vue3-webpack5": "^8.0.10",
+    "@storybook/blocks": "^8.1.1",
+    "@storybook/test": "^8.1.1",
+    "@storybook/vue3": "^8.1.1",
+    "@storybook/vue3-webpack5": "^8.1.1",
     "@typescript-eslint/parser": "^7.8.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -51,7 +52,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "node-sass": "^9.0.0",
     "sass-loader": "^14.2.1",
-    "storybook": "^8.0.10",
+    "storybook": "^8.1.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.4.5",
     "vue-loader": "^17.4.2"
